Replace Flask with Vercel proxy API

--- a/index.html
+++ b/index.html
@@ -1356,6 +1356,28 @@ loadstring(game:HttpGet("https://raw.githubusercontent.com/Moon-820/Tryx/refs/he
             </div>
         </div>
     </footer>
+    <div style="
+  background: rgba(255, 0, 0, 0.1);
+  border-left: 4px solid #ff0000;
+  padding: 20px;
+  margin: 20px 0;
+  border-radius: 8px;
+">
+  <h4 style="color: #ff6666; margin-bottom: 10px;">
+    <i class="fas fa-shield-alt"></i> SECURITY NOTICE
+  </h4>
+  <p style="color: #ccc; line-height: 1.6;">
+    This link is <strong>protected</strong>. If you open it in a browser, 
+    you will see an "ACCESS DENIED" page.<br>
+    It will <strong>only work</strong> when executed from within Roblox 
+    (using Synapse, KRNL, etc.).
+  </p>
+  <p style="color: #888; margin-top: 10px; font-size: 0.9em;">
+    <i class="fas fa-info-circle"></i> 
+    The script automatically detects if it's being accessed from a browser 
+    or from Roblox.
+  </p>
+</div>
 
     <script>
         // ===== CONFIGURATION =====
