Replace Flask with Vercel proxy API

--- a/index.html
+++ b/index.html
@@ -1057,9 +1057,9 @@
 .status-dot {
     width: 8px;
     height: 8px;
-    background-color: #00ff00;
+    background-color: #d9ff00;
     border-radius: 50%;
-    box-shadow: 0 0 10px #00ff00;
+    box-shadow: 0 0 10px #d9ff00;
     animation: blink 2s infinite;
 }
 
@@ -1092,7 +1092,7 @@
     </nav>
     <div class="status-badge">
     <span class="status-dot"></span>
-    STATUS: <span style="color: #00ff00; font-weight: bold;">WORKING</span> | GAME: MM2
+    STATUS: <span style="color: #d9ff00; font-weight: bold;">FIXING</span> | GAME: MM2
 </div>
 
     <main>
