--- a/index.html
+++ b/index.html
@@ -1051,7 +1051,7 @@
     display: flex;
     align-items: center;
     gap: 10px;
-    box-shadow: 0 0 15px rgba(0, 255, 0, 0.2);
+    box-shadow: 0 0 15px rgb(255, 251, 0);
 }
 
 .status-dot {
